[project]
name = "xai-flask"
version = "0.1.0"
description = "A Xircuits component library for Flask!"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-flask"
keywords = ["xircuits", "flask"]

# Xircuits-specific configurations
[tool.xircuits]
requirements_path = "requirements.txt"