[project]
name = "xai-flask"
version = "0.5.0"
description = "A Xircuits component library for Flask!"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-flask"
keywords = ["xircuits", "flask"]

dependencies = [
    "Flask==3.0.2",
    "Flask-APScheduler==1.13.1",
    "Flask-Cors==4.0.0"
]

# Xircuits-specific configurations
[tool.xircuits]
requirements_path = "requirements.txt"
default_example_path = "examples/DeclarativeExample.xircuits"
